--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="sp_36">36sp</dimen>
     <dimen name="dp_36">36dp</dimen>
+    <dimen name="sp_32">32sp</dimen>
+    <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_75">75dp</dimen>
+    <dimen name="dp_125">125dp</dimen>
 </resources>
